Asset/css/bkg.css
body {
    background: url(../img/background.gif) no-repeat center center fixed;
    background-size: cover;
    margin: 0;
    padding: 0;
    height: 100vh;
}

/* Mobile-friendly fix: Remove background-attachment: fixed on small screens */
@media (max-width: 768px) {
    body {
        background: url(../img/background.gif);
        background-attachment: scroll;
    }
}

#particles-js {
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: -1;
}

.scrollable-pre {
    overflow-x: auto;
    white-space: nowrap;
    /* optional, prevents line breaks */
}

code.prettyprint,
pre.prettyprint {
    background-color: #06060666 !important;
    backdrop-filter: blur(4px) !important;
    border: 1px solid rgb(47 47 47 / 73%) !important;
    -webkit-backdrop-filter: blur(10px) !important;
    border-radius: 8px !important;
}

